<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('user_lab_reactions', function (Blueprint $table) {
            $table->id();
            $table->foreignId('user_id')->constrained()->cascadeOnDelete();
            $table->string('reaction_key', 100);
            $table->timestamps();

            $table->unique(['user_id', 'reaction_key']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('user_lab_reactions');
    }
};

